--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
+@import url("manrope/stylesheet.css");
 body {
-  margin: 0;
-  min-width: 960px;
-  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 32px;
-  color: #222222;
-  background-color: #f2f4f6;
-  background-image: url("img/hero-bg.jpg");
-  background-repeat: no-repeat;
-  background-position: top center;
+	margin: 0;
+	min-width: 960px;
+	font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+	font-size: 16px;
+	line-height: 32px;
+	color: #222222;
+	background-color: #f2f4f6;
+	background-image: url("img/hero-bg.jpg");
+	background-repeat: no-repeat;
+	background-position: top center;
+	text-align: center;
 }
 
 .container {
@@ -18,8 +20,10 @@ body {
 }
 
 .page-header {
-  margin: 0 0 160px;
-  padding: 32px 0 32px;
+	margin: 0 0 160px;
+	padding: 32px 0 32px;
+	text-align: right;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .page-header .container,
@@ -56,17 +60,20 @@ body {
 }
 
 .heading {
-  margin: 0 0 16px;
-  font-family: "Old Standard TT", "Times", "Times New Roman", serif;
-  font-size: 88px;
-  line-height: 96px;
-  font-weight: 400;
+	margin: 0 0 16px;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	font-size: 88px;
+	line-height: 96px;
+	font-weight: 400;
+	text-align: center;
 }
 
 .hero-image p {
-  margin: 0;
-  font-size: 32px;
-  line-height: 48px;
+	margin: 0;
+	font-size: 32px;
+	line-height: 48px;
+	text-align: center;
+	font-family: manrope;
 }
 
 .intro {
@@ -74,12 +81,12 @@ body {
 }
 
 .subheading {
-  margin: 0 0 56px;
-  font-family: "Old Standard TT", "Times", "Times New Roman", serif;
-  font-size: 64px;
-  line-height: 80px;
-  font-weight: 400;
-  text-align: center;
+	margin: 0 0 56px;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	font-size: 64px;
+	line-height: 80px;
+	font-weight: 400;
+	text-align: center;
 }
 
 .user-image {
@@ -89,14 +96,17 @@ body {
 
 .intro h3,
 .portfolio h3 {
-  margin: 0 0 12px;
-  font-size: 28px;
-  line-height: 40px;
-  font-weight: 500;
+	margin: 0 0 12px;
+	font-size: 28px;
+	line-height: 40px;
+	font-weight: 500;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
+	text-align: center;
 }
 
 .intro p {
-  margin: 0 0 32px;
+	margin: 0 0 32px;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 }
 
 .skills-list {
@@ -136,7 +146,8 @@ body {
 }
 
 .portfolio {
-  margin: 0 0 120px;
+	margin: 0 0 120px;
+	font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana, sans-serif;
 }
 
 .projects {
@@ -170,9 +181,11 @@ body {
 }
 
 .page-footer {
-  padding: 40px 0;
-  background-color: #00417d;
-  color: #ffffff;
+	padding: 40px 0;
+	background-color: #00417d;
+	color: #ffffff;
+	text-align: right;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .page-footer a {
@@ -192,3 +205,4 @@ body {
   padding-left: 25px;
   background-image: url("img/icon-phone-footer.svg");
 }
+.social{display:inline-block}.social a{display:block;width:48px;height:48px;margin:0 10px 10px 0;text-align:center;color:#000;background:#fff;border:1px solid #ccc;border-radius:24px;box-shadow:0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1)}.social a:hover{color:#fff}.social svg{margin-top:7px;width:32px;height:32px}.email a:hover{background:#5bc7ff}.telegram a:hover{background:#249bd7}.vk a:hover{background:#4a76a8}.whatsapp a:hover{background:#50b154}
